<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="mx.edu.utng.persona.MainActivity"
    android:background="#fefefe">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/nombre" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/txtNombre"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/peso" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/txtPeso"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/estatura" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/txtEstatura"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ejercicio"
        android:id="@+id/chEjercicio"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hombre"
            android:id="@+id/rdHombre"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mujer"
            android:id="@+id/rdMujer"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"/>

    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton1"
        android:id="@+id/btnCalcular"
        android:layout_weight="1"
        android:background="#2eb71b" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:id="@+id/txtResultado"
        android:text="@string/resultado" />

    <Button
        android:id="@+id/btnLimpiar"
        android:text="@string/boton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:layout_gravity="center_horizontal"
        android:background="#2c4ac3" />
</LinearLayout>
